--- a/blocks/product/_product.scss
+++ b/blocks/product/_product.scss
@@ -1,7 +1,9 @@
 .wntrProductBlock {
-    background-color: var(--wntr-secondary-color);    
-    padding-right: calc(100vw - 80%);
-    padding-left: calc(100vw - 80%);
+    background-color: var(--wntr-secondary-color);
+    @media (min-width: map-get($grid-breakpoints, "lg")) {
+        padding-right: calc(100vw - 80%);
+        padding-left: calc(100vw - 80%);
+    }
     color: var(--wntr-white-color);
     .container {
         padding-top: calc(var(--bs-gutter-x) * 3);
@@ -11,6 +13,10 @@
         width: 100%;
         padding: calc(var(--bs-gutter-x)/2);
         border: 1px solid var(--wntr-white-color);
+        margin-bottom: var(--bs-gutter-x);
+        @media (min-width: map-get($grid-breakpoints, "lg")) {
+            margin-bottom: 0;
+        }
     }
     &__name {
         margin-bottom: var(--bs-gutter-x);
