--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,3 +14,4 @@
 @import '../blocks/image/image';
 @import '../blocks/split/split';
 @import '../blocks/checkout/checkout';
+@import '../blocks/cards/cards';
